# shield

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  get_height.rs
backend/migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_wallets.sql  004_create_blockchain_tables.sql  005_create_solana_wallets.sql  006_add_auth_method.sql
backend/src/: main.rs
backend/src/handlers/: auth.rs  balance.rs  common.rs  mod.rs  send.rs  solana_wallet.rs  transactions.rs  user.rs  wallet.rs
backend/src/middleware/: auth.rs  error.rs
backend/src/models/: mod.rs  session.rs  user.rs  wallet.rs
backend/src/solana/: bridge.rs  mod.rs  rpc.rs  wallet.rs
backend/src/utils/: jwt.rs
backend/src/zcash/: account.rs  broadcaster.rs  config.rs  database.rs  lightwalletd.rs  mod.rs  note_selection.rs  params.rs  prover.rs  scanner.rs  transaction.rs  wallet.rs
frontend/: package.json
frontend/app/: globals-reference.css  globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/layout/: Container.tsx  Footer.tsx  Navbar.tsx
frontend/components/profile/: ProfileSidebar.tsx
frontend/components/sections/: CTA.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Problem.tsx  Security.tsx  Technical.tsx
frontend/components/ui/: AnimatedShield.tsx  Button.tsx  Card.tsx  GradientText.tsx  Input.tsx
frontend/components/wallet/: BridgeModal.tsx  ScanToPayModal.tsx  SendTransactionModal.tsx  TransactionHistory.tsx  TransactionHistorySidebar.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: utils.ts
frontend/lib/api/: auth.ts  solana.ts  wallet.ts
pos/: package.json  tailwind.config.ts
pos/app/: globals.css  layout.tsx  page.tsx
pos/app/order/[orderId]/: page.tsx
pos/components/menu/: Cart.tsx  MenuItem.tsx
pos/components/order/: OrderStatus.tsx  QRCodeDisplay.tsx
pos/components/ui/: Card.tsx
pos/components/wallet/: MerchantBalance.tsx
pos/lib/api/: wallet.ts
pos/lib/constants/: menu.ts  merchant.ts
