[package]
name = "shield-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - Use sqlx without sqlite to avoid conflict with zcash_client_sqlite
# NOTE: Cannot use uuid/chrono features as they pull in sqlx-sqlite which conflicts
# with zcash_client_sqlite's rusqlite. UUID/chrono handled via manual conversion.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "tls-rustls", "macros"] }
# rusqlite must match zcash_client_sqlite's version (0.37) to avoid libsqlite3-sys conflict
rusqlite = { version = "0.37", features = ["bundled"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9"

# Utilities
dotenv = "0.15"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
urlencoding = "2.1"
hex = "0.4"
dirs = "5.0"
time = "0.3"
nonempty = "0.11"

# Zcash Core Libraries - NU6 compatible versions (all aligned to latest)
zcash_primitives = "0.26"
zcash_proofs = { version = "0.26", features = ["download-params"] }
zcash_client_backend = { version = "0.21", features = ["lightwalletd-tonic", "lightwalletd-tonic-tls-webpki-roots", "orchard"] }
zcash_address = "0.10"
zcash_keys = { version = "0.12", features = ["orchard"] }
zcash_protocol = "0.7"
zcash_client_sqlite = { version = "0.19", features = ["orchard"] }
zip32 = "0.2"
bip39 = { version = "2.0", features = ["rand_core"] }

# Solana Libraries
solana-sdk = "2.1"
solana-client = "2.1"
bs58 = "0.5"

# Networking (Zcash) - Must match zcash_client_backend's tonic version (0.14)
tonic = { version = "0.14", features = ["transport", "tls-webpki-roots", "tls-native-roots", "tls-ring"] }
prost = "0.13"
tokio-stream = "0.1.17"

# Encryption
aes-gcm = "0.10"
rand = "0.8"
secrecy = "0.8"

# Error handling
anyhow = "1.0"
